Image Gallery Practice

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+        <meta name = "author" content= "Ms.Langdon">
         <title></title>
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <header></header>
-        <main></main>
+        <main>
+        <h1>My Image Gallery</h1>
+        <div id="gallery-container">
+            <img src="https://placehold.co/600x400" alt ="img 1 place holder">
+            <img src="https://placehold.co/600x400" alt ="img 2 place holder">
+            <img src="https://placehold.co/600x400" alt ="img 3 place holder">
+
+        </div>
+    </main>
         <footer></footer>
         <script src="script.js"></script>
     </body>
